@@ -492,7 +492,8 @@ class CTemplateScreen extends CScreen {
 	 * Delete Screen
 	 *
 	 * @param array $screenids
-	 * @return boolean
+	 *
+	 * @return array
 	 */
 	public function delete($screenIds) {
 		$screenIds = zbx_toArray($screenIds);
